feat: 增强系统配置后台管理
